fixed alignment issue with table header for some admin screens

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -89,3 +89,8 @@ body {
     border-bottom: 0;
   }
 }
+
+/* Custom For Tables */
+.table-header {
+  font-size: 24px;
+}
